fix responsiveness on small screen

--- a/components/layout/MainNavigation.module.css
+++ b/components/layout/MainNavigation.module.css
@@ -39,6 +39,7 @@
 		height: 2.125rem;
 		min-width: 12.625rem;
 		min-height: 2.125rem;
+		margin-left: -15px !important;
 	}
 }
 
